Adjust configuration for real-life environments
* In "non-Vagrant" environments, bind-mounts are problematic, due to
  differing user/group IDs between containers and the host. Use a named
  volume instead for `/var/jenkins_home`.
* Don't share Jenkins logs with the host through files on a volume;
  Jenkins logs on stdout are collected by Docker anyway.
* Mount Docker socket in readonly mode
* Unrelated: Add Slack notifications Jenkins plugin

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -5,7 +5,7 @@ ARG docker_version=17.06.0
 ARG docker_gid=999
 
 ENV JAVA_OPTS="-Xmx512m"
-ENV JENKINS_OPTS="--logfile=/var/log/jenkins/jenkins.log --webroot=/var/cache/jenkins/war"
+ENV JENKINS_OPTS="--webroot=/var/cache/jenkins/war"
 
 # make sure war cache directory exists (with the right permissions)
 USER root
@@ -36,4 +36,5 @@ RUN /usr/local/bin/install-plugins.sh \
 	blueocean \
 	docker-workflow \
 	git \
+	slack \
 	workflow-aggregator
