--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,8 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - /var/jenkins_home:/var/jenkins_home
-      - /var/log/jenkins:/var/log/jenkins
-      - /var/run/docker.sock:/var/run/docker.sock
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock:ro
   nginx-artifacts:
     image: nginx
     restart: always
@@ -16,4 +15,6 @@ services:
       - "9000:80"
     volumes:
       - ./nginx-artifacts/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /var/jenkins_home/artifacts:/www/data:ro
+      - jenkins_home:/var/jenkins_home:ro
+volumes:
+  jenkins_home:
